--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '7.1.2'
     id 'jacoco'
     id 'application'
+    id 'info.solidsoft.pitest' version '1.7.4'
 }
 
 group 'com.juka'
@@ -27,6 +28,7 @@ test {
     useJUnitPlatform {
         includeEngines 'junit-jupiter', 'junit-vintage'
     }
+    dependsOn 'pitest'
     finalizedBy jacocoTestReport
 }
 
@@ -41,7 +43,7 @@ repositories {
 
 dependencies {
     implementation group: 'org.jacoco', name: 'org.jacoco.core', version: '0.8.7'
-    implementation group: 'com.google.inject', name: 'guice', version: '5.10.0'
+    implementation group: 'com.google.inject', name: 'guice', version: '5.1.0'
     implementation group: 'org.slf4j', name: 'slf4j-simple', version: '2.0.0-alpha6'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.2'
 
