--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ jacocoTestReport {
     dependsOn test
 }
 
+build {
+    dependsOn 'pitest'
+}
+
 repositories {
     mavenCentral()
     maven { url 'https://jitpack.io' }
